--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <title>Matcha</title>
   </head>
   <body>
-    <!-- Esto es lo que se verá en el navegador web -->
+  <header class="header">
+  <a href="/">
+    <img src="logo.svg" alt="logo"/>
+  </a>
+  <nav class="navbar">
+    <ul>
+         <li class="enlacenav">Platform</li>
+         <li class="enlacenav">Pricing</li>
+         <li class="enlacenav">Customers</li>
+         <li class="enlacenav">Resources</li>
+         <li class="enlacenav">About</li>
+    </ul>
+    </nav>
+  <div class="actions">
+      <a>Sing In</a>
+      <button>Start free trial</button>
+  </div>
+  </header>
     <h1>Build your blog. Build your business</h1>
     <h4>
       Instantly publish articles, drive more traffic, grow your email list, and
